--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ code/python/us-stock-analysis/src/stream/TFI/datasets/backup
 
 # formatter
 code/python/us-stock-analysis/src/stream/TFI/formatter.py
+
+queries
